fixed: print dialog buttons not visibile with Grid Theme, https://github.com/kobotoolbox/enketo-express/issues/198

--- a/src/sass/core/_print.scss
+++ b/src/sass/core/_print.scss
@@ -34,7 +34,6 @@ body {
 .form-logo,
 .form-footer,
 .or-appearance-no-print,
-button,
 .ad,
 .paper #submit-form {
     display: none !important;
